{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 408,
  "lineage": "a925660e-ccaa-56c3-75c9-4aef1d671a4a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "codx-ecs-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:loadbalancer/app/Codex-ecs-alb/e0b8a4dadd24e163",
            "arn_suffix": "app/Codex-ecs-alb/e0b8a4dadd24e163",
            "dns_name": "internal-Codex-ecs-alb-704805639.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:935470747152:loadbalancer/app/Codex-ecs-alb/e0b8a4dadd24e163",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Codex-ecs-alb",
            "security_groups": [
              "sg-0a77387703595178f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006e641c96967009c"
              },
              {
                "subnet_id": "subnet-046c953ac31f4f3f8"
              }
            ],
            "subnets": [
              "subnet-006e641c96967009c",
              "subnet-046c953ac31f4f3f8"
            ],
            "vpc_id": "vpc-0c3045a352ead7141",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.codx-ecs-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "codx-ecs-backend-service-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:listener/app/Codex-ecs-alb/e0b8a4dadd24e163/0c1ba1f28e12198c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:targetgroup/Codex-ecs-backend-tg/f4931cc9b18de17d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:935470747152:listener/app/Codex-ecs-alb/e0b8a4dadd24e163/0c1ba1f28e12198c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:loadbalancer/app/Codex-ecs-alb/e0b8a4dadd24e163",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.codx-ecs-alb",
            "aws_alb_target_group.codx-ecs-backend-service-tg",
            "aws_security_group.codx-ecs-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "codx-ecs-platform-client-service-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:listener/app/Codex-ecs-alb/e0b8a4dadd24e163/8e91d376a288cc4e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:targetgroup/Codex-ecs-platform-client-tg/a8b630cb7a480a1a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:935470747152:listener/app/Codex-ecs-alb/e0b8a4dadd24e163/8e91d376a288cc4e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:loadbalancer/app/Codex-ecs-alb/e0b8a4dadd24e163",
            "port": 8002,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.codx-ecs-alb",
            "aws_alb_target_group.codx-ecs-platform-client-service-tg",
            "aws_security_group.codx-ecs-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "codx-ecs-product-client-service-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:listener/app/Codex-ecs-alb/e0b8a4dadd24e163/851c2a09dce68203",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:targetgroup/Codex-ecs-product-client-tg/d661523560cf774e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:935470747152:listener/app/Codex-ecs-alb/e0b8a4dadd24e163/851c2a09dce68203",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:loadbalancer/app/Codex-ecs-alb/e0b8a4dadd24e163",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.codx-ecs-alb",
            "aws_alb_target_group.codx-ecs-product-client-service-tg",
            "aws_security_group.codx-ecs-alb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "codx-ecs-backend-service-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:targetgroup/Codex-ecs-backend-tg/f4931cc9b18de17d",
            "arn_suffix": "targetgroup/Codex-ecs-backend-tg/f4931cc9b18de17d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:935470747152:targetgroup/Codex-ecs-backend-tg/f4931cc9b18de17d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Codex-ecs-backend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c3045a352ead7141"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "codx-ecs-platform-client-service-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:targetgroup/Codex-ecs-platform-client-tg/a8b630cb7a480a1a",
            "arn_suffix": "targetgroup/Codex-ecs-platform-client-tg/a8b630cb7a480a1a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:935470747152:targetgroup/Codex-ecs-platform-client-tg/a8b630cb7a480a1a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Codex-ecs-platform-client-tg",
            "port": 8002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c3045a352ead7141"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "codx-ecs-product-client-service-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935470747152:targetgroup/Codex-ecs-product-client-tg/d661523560cf774e",
            "arn_suffix": "targetgroup/Codex-ecs-product-client-tg/d661523560cf774e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:935470747152:targetgroup/Codex-ecs-product-client-tg/d661523560cf774e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Codex-ecs-product-client-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c3045a352ead7141"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "codx-backend-service-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935470747152:security-group/sg-08eaca91f72cf5396",
            "description": "Security group for codex backend service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rules for codex application",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08eaca91f72cf5396",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a77387703595178f",
                  "sg-0b05a6b36e5e045de"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Codex-backend-service-sg",
            "name_prefix": "",
            "owner_id": "935470747152",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c3045a352ead7141"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "codx-ecs-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935470747152:security-group/sg-0a77387703595178f",
            "description": "Security group for Codex ECS Application Loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rules for codex application",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a77387703595178f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b05a6b36e5e045de",
                  "sg-0c4a917887cc41ce8"
                ],
                "self": false,
                "to_port": 8002
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08eaca91f72cf5396",
                  "sg-0b05a6b36e5e045de"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03dbaba5ddac3238e",
                  "sg-0b05a6b36e5e045de"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Codex-ecs-alb-sg",
            "name_prefix": "",
            "owner_id": "935470747152",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c3045a352ead7141"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "codx-platform-client-service-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935470747152:security-group/sg-0c4a917887cc41ce8",
            "description": "Security group for codex platform client service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rules for codex application",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4a917887cc41ce8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a77387703595178f",
                  "sg-0b05a6b36e5e045de"
                ],
                "self": false,
                "to_port": 8002
              }
            ],
            "name": "Codex-platform-client-service-sg",
            "name_prefix": "",
            "owner_id": "935470747152",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c3045a352ead7141"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "codx-product-client-service-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935470747152:security-group/sg-03dbaba5ddac3238e",
            "description": "Security group for codex product client service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rules for codex application",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dbaba5ddac3238e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a77387703595178f",
                  "sg-0b05a6b36e5e045de"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Codex-product-client-service-sg",
            "name_prefix": "",
            "owner_id": "935470747152",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c3045a352ead7141"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "codx-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935470747152:security-group/sg-0b05a6b36e5e045de",
            "description": "Security group for codex RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rules for Codex RDS",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b05a6b36e5e045de",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Inbound rule for Codex RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03dbaba5ddac3238e"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Inbound rule for Codex RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08eaca91f72cf5396"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Inbound rule for Codex RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a77387703595178f"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Inbound rule for Codex RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c4a917887cc41ce8"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "Codex-rds-sg",
            "name_prefix": "",
            "owner_id": "935470747152",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c3045a352ead7141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.codx-platform-client-service-sg",
            "aws_security_group.codx-product-client-service-sg",
            "aws_security_group.codx-backend-service-sg",
            "aws_security_group.codx-ecs-alb-sg"
          ]
        }
      ]
    }
  ]
}